--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,4 @@
 * {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
+/*# sourceMappingURL=styles.css.map */
