header styling completed top bar done, with styling and images

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -19,16 +19,18 @@ header {
     .container {
         display: flex;
         justify-content: space-between;
+        flex-wrap: nowrap;
         align-items: center;
         background-color: $primary-black;
-        padding: .5em;
-        gap: .5em;
+        padding: .3em;
+        gap: 1.5em;
         // convenience tire shop text
         .center-text {
             color: $font-white;
             font-weight: 800;
             display: flex;
             flex-direction: column;
+            font-size: .9em;
             #second {
                 color: $tire-shop-red;
                 font-weight: bold;
@@ -39,9 +41,14 @@ header {
             }
         }
         .fedex-section {
+            .fedex-logo img {
+                width: 5em;
+            }
+            font-size: .8em;
             display: flex;
             flex-direction: column;
             color: $font-white;
         }
     }
 }
+
