--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -9,12 +9,14 @@ header .container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-color: #242323;
-  padding: .5em;
-  gap: .5em;
+  padding: .3em;
+  gap: 1.5em;
 }
 
 header .container .center-text {
@@ -27,6 +29,7 @@ header .container .center-text {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: .9em;
 }
 
 header .container .center-text #second {
@@ -44,6 +47,7 @@ header .container .center-text #third {
 }
 
 header .container .fedex-section {
+  font-size: .8em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,5 +56,9 @@ header .container .fedex-section {
       -ms-flex-direction: column;
           flex-direction: column;
   color: #FFFFFF;
+}
+
+header .container .fedex-section .fedex-logo img {
+  width: 5em;
 }
 /*# sourceMappingURL=styles.css.map */
