--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+body {
+  background-color: #F2F2F2;
+}
+
 header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -265,5 +269,43 @@ main .product-description-container {
 
 .auction-policy-container .auction-policy .auction-policy-content #red-text {
   color: #E43333;
+}
+
+.tire-brand-container .content-container {
+  padding: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #242323;
+  gap: 1em;
+  padding-bottom: 3em;
+}
+
+.tire-brand-container .content-container h2 {
+  color: #FFFFFF;
+  text-align: center;
+  font-weight: 500;
+}
+
+.tire-brand-container .content-container .images-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 4em;
+  background-color: #242323;
 }
 /*# sourceMappingURL=styles.css.map */
