--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -245,3 +245,15 @@ main {
     }
 }
 
+// terms and conditions 
+.terms-container {
+
+    .terms-content-container {
+        padding: 1em;
+        h2 {
+            text-align: center;
+            font-weight: 600;
+            font-size: 1.2em;
+        }
+    }
+}
